# URAxLaws

./: Dockerfile  MANIFEST.in  README.md  config.ini.example  docker-compose.yml  env.ollama-binding-options.example  pyproject.toml  uraxlaw-api  uraxlaw.service.example
docs/: DockerDeployment.md  UraxLaw_concurrent_explain.md
k8s-deploy/: README.md  install_uraxlaw.sh  install_uraxlaw_dev.sh  uninstall_uraxlaw.sh  uninstall_uraxlaw_dev.sh
k8s-deploy/uraxlaw/: Chart.yaml  values.yaml
k8s-deploy/uraxlaw/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
lightrag/: prompt.py
reproduce/: Step_1.py  Step_1_openai_compatible.py  Step_3.py  Step_3_openai_compatible.py
uraxlaw/: __init__.py  base.py  constants.py  exceptions.py  operate.py  prompt.py  rerank.py  uraxlaw.py  utils.py
uraxlaw/api/: README.md  auth.py  config.py  gunicorn_config.py  run_with_gunicorn.py  uraxlaw_server.py  utils_api.py
uraxlaw/api/routers/: __init__.py  document_routes.py  graph_routes.py  ollama_api.py  query_routes.py
uraxlaw/api/webui/assets/: feature-graph-C6IuADHZ.js
uraxlaw/kg/: faiss_impl.py  json_doc_status_impl.py  json_kv_impl.py  milvus_impl.py  mongo_impl.py  nano_vector_db_impl.py  neo4j_impl.py  networkx_impl.py  postgres_impl.py  redis_impl.py  shared_storage.py
uraxlaw/kg/deprecated/: chroma_impl.py
uraxlaw/llm/: Readme.md  anthropic.py  azure_openai.py  binding_options.py  hf.py  jina.py  llama_index_impl.py  lmdeploy.py  lollms.py  nvidia_openai.py  ollama.py  openai.py  zhipu.py
uraxlaw/tools/: check_initialization.py
uraxlaw/tools/uraxlaw_visualizer/: README.md
uraxlaw_webui/: README.md
uraxlaw_webui/src/: App.tsx  AppRouter.tsx
uraxlaw_webui/src/api/: uraxlaw.ts
uraxlaw_webui/src/components/documents/: ClearDocumentsDialog.tsx  DeleteDocumentsDialog.tsx  PipelineStatusDialog.tsx  UploadDocumentsDialog.tsx
uraxlaw_webui/src/components/graph/: EditablePropertyRow.tsx
uraxlaw_webui/src/components/retrieval/: ChatMessage.tsx  QuerySettings.tsx
uraxlaw_webui/src/components/status/: StatusCard.tsx  StatusDialog.tsx
uraxlaw_webui/src/features/: LoginPage.tsx
uraxlaw_webui/src/lib/: constants.ts
uraxlaw_webui/src/locales/: en.json
uraxlaw_webui/src/services/: navigation.ts
uraxlaw_webui/src/stores/: state.ts
