[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UraxLaw"
dynamic = ["version"]
authors = [
    {name = "Ura Team"}
]
description = "URA-xLaw: Legal Question-Answering for the State Bank of Vietnam"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp",
    "configparser",
    "dotenv",
    "future",
    "json-repair>=0.50.0",
    "nano-vectordb",
    "networkx",
    "numpy",
    "pandas>=2.0.0",
    "pipmaster",
    "pydantic",
    "pypinyin",
    "python-dotenv",
    "setuptools",
    "tenacity",
    "tiktoken",
    "xlsxwriter>=3.1.0",
]

[project.optional-dependencies]
api = [
    # Core dependencies
    "aiohttp",
    "configparser",
    "dotenv",
    "future",
    "nano-vectordb",
    "networkx",
    "numpy",
    "openai",
    "pandas>=2.0.0",
    "pipmaster",
    "pydantic",
    "pypinyin",
    "python-dotenv",
    "setuptools",
    "tenacity",
    "tiktoken",
    "xlsxwriter>=3.1.0",
    # API-specific dependencies
    "aiofiles",
    "ascii_colors",
    "asyncpg",
    "distro",
    "fastapi",
    "httpcore",
    "httpx",
    "jiter",
    "passlib[bcrypt]",
    "psutil",
    "PyJWT",
    "python-jose[cryptography]",
    "python-multipart",
    "pytz",
    "uvicorn",
]

[project.scripts]
uraxlaw-server = "uraxlaw.api.uraxlaw_server:main"
uraxlaw-gunicorn = "uraxlaw.api.run_with_gunicorn:main"

[project.urls]
Homepage = "https://github.com/waanney/UraxLaw"
Documentation = "https://github.com/waanney/UraxLaw"
Repository = "https://github.com/waanney/UraxLaw"
"Bug Tracker" = "https://github.com/waanney/UraxLaw"

[tool.setuptools.packages.find]
include = ["uraxlaw*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "uraxlaw.__version__"}

[tool.setuptools.package-data]
uraxlaw = ["api/webui/**/*"]

[tool.ruff]
target-version = "py310"
